--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -63,54 +63,55 @@
    	  </div>
    	  <div class="filter-btn">
    	  	 <ul id="buttons">
-   	  	 	<li [ngClass]="{'active': istopeValue === 'all'}" data-target="all" value="all" (click)="selectIsotop($event)">All</li>
-   	  	 	<li [ngClass]="{'active': istopeValue === 'fruits'}" data-target="fruits" value="fruits" (click)="selectIsotop($event)">Oranges</li>
-   	  	 	<li [ngClass]="{'active': istopeValue === 'freshmeat'}" data-target="freshmeat" value="freshmeat" (click)="selectIsotop($event)">Fresh Meat</li>
-            <li [ngClass]="{'active': istopeValue === 'vegetables'}" data-target="vegetables" value="vegetables" (click)="selectIsotop($event)">Vegetables</li>
-            <li [ngClass]="{'active': istopeValue === 'fastfoods'}" data-target="fastfoods" value="fastfoods" (click)="selectIsotop($event)">Fastfoods</li>
+   	  	 	  <li [ngClass]="{'active': istopeValue === 'all'}" data-target="all" value="all" (click)="selectIsotop($event)">All</li>
+   	  	 	  <li [ngClass]="{'active': istopeValue === 'fruits'}" data-target="fruits" value="fruits" (click)="selectIsotop($event)">Fruits</li>
+            <li [ngClass]="{'active': istopeValue === 'vegetables'}" data-target="vegetables" value="vegetables" (click)="selectIsotop($event)">Vegetables</li> 
    	  	 </ul>
    	  </div>
    	  <div class="items">
-   	  	 <div class="box" data-id="freshmeat">
-   	  	 	 <div class="inner">
-   	  	 	 	 <img src="assets/img/product/featured/feature-1.jpg" alt="portfolio" />
-   	  	 	 </div>
-   	  	 </div>
    	  	 <div class="box" data-id="fruits">
    	  	 	 <div class="inner">
-   	  	 	 	 <img src="assets/img/product/featured/feature-2.jpg" alt="portfolio" />
+   	  	 	 	 <img src="assets/img/products_images/fruits/cirtus/orri.png" alt="portfolio" />
    	  	 	 </div>
-   	  	 </div>
+          </div>
+          <div class="box" data-id="vegetables">
+            <div class="inner">
+               <img src="assets/img/products_images/vegetables/fruit_vegetables/cherry_tomato.png" alt="portfolio" />
+            </div>
+         </div>
    	  	 <div class="box" data-id="fruits">
    	  	 	 <div class="inner">
-   	  	 	 	 <img src="assets/img/product/featured/feature-3.jpg" alt="portfolio" />
+   	  	 	 	 <img src="assets/img/products_images/fruits/red_fruits/blueberries.png" alt="portfolio" />
    	  	 	 </div>
-   	  	 </div>
-   	  	 <div class="box" data-id="fastfoods">
-   	  	 	 <div class="inner">
-   	  	 	 	 <img src="assets/img/product/featured/feature-4.jpg" alt="portfolio" />
-   	  	 	 </div>
-   	  	 </div>
-   	  	 <div class="box" data-id="fastfoods">
-   	  	 	 <div class="inner">
-   	  	 	 	 <img src="assets/img/product/featured/feature-5.jpg" alt="portfolio" />
-   	  	 	 </div>
-   	  	 </div>
-   	  	 <div class="box" data-id="vegetables">
-   	  	 	 <div class="inner">
-   	  	 	 	 <img src="assets/img/product/featured/feature-6.jpg" alt="portfolio" />
-   	  	 	 </div>
-        </div>
+          </div>
         <div class="box" data-id="vegetables">
             <div class="inner">
-                 <img src="assets/img/product/featured/feature-7.jpg" alt="portfolio" />
+               <img src="assets/img/products_images/vegetables/potatoes/yam.png" alt="portfolio" />
             </div>
-       </div>
-       <div class="box" data-id="vegetables">
+        </div>
+   	  	 <div class="box" data-id="fruits">
+   	  	 	 <div class="inner">
+   	  	 	 	 <img src="assets/img/products_images/fruits/red_fruits/gooseberry.png" alt="portfolio" />
+   	  	 	 </div>
+          </div>
+        <div class="box" data-id="vegetables">
             <div class="inner">
-                <img src="assets/img/product/featured/feature-8.jpg" alt="portfolio" />
+                 <img src="assets/img/products_images/vegetables/herbs/mint.png" alt="portfolio" />
             </div>
-       </div>    
+        </div>
+   	  	 <div class="box" data-id="fruits">
+   	  	 	 <div class="inner">
+   	  	 	 	 <img src="assets/img/products_images/fruits/red_fruits/cherry_red.png" alt="portfolio" />
+   	  	 	 </div>
+   	  	 </div>
+   	  	<div class="box" data-id="vegetables">
+          <div class="inner">
+              <img src="assets/img/products_images/vegetables/root_vegetables/pink_radish.png" alt="portfolio" />
+          </div>
+        </div>    
+   	  	 
+        
+       
    	  </div>
    </div>
 </section>
