--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -129,13 +129,14 @@
                     </div>
                 </div>
             </div>
-
+            <button class="load_more_btn" (click)="scrollHandler()" 
+                *ngIf="allProducts.length !== productList.length + 1"> 
+                Load More 
+            </button>
           </div>
       </div>
   </div>
-  <h1> {{scrolled === scrollable}} </h1>
 </section>
-
 <!-- Product Section End -->
 </div>
 
