--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -17,15 +17,23 @@
     padding-right: 15px;
 }
 
+.custom-owl-carousel ::ng-deep .owl-item .item > div > img {
+    box-shadow: 0 1px 5px 2px #bbb;
+    border-radius: 15px;
+}
+
 .custom-owl-carousel ::ng-deep .owl-item .item h4 {
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
     position: absolute;
-    bottom: 10px;
+    bottom: 30px;
     left: 10%;
-    background-color: #fff;
+    background-color: #7eac39;
+    color: #fff;
+    border-radius: 5px;
     padding: 7px 14px;
     width: 80%;
+    box-shadow: 0 4px 7px 0px #4a4a4a;
 }
 
 .custom-owl-carousel ::ng-deep .owl-prev,
@@ -140,16 +148,22 @@
 	width:100%;
 }
 
-.portfolio .items .box{
+.portfolio .items .box {
 	float: left;
 	width: 25%;
 	padding:15px;
 	transition: all 1s ease;
 }
 
+.portfolio .items .box .inner {
+    width: 70%;
+    margin: 0 auto;
+}
+
 .portfolio .items .box .inner img{
 	width:100%;
-	display: block;
+    display: block;
+    border-radius: 15px;
 }
 
 .carousel-inner .item {
@@ -169,6 +183,10 @@
 .carousel-inner .item .carousel-caption h3, 
 .carousel-inner .item .carousel-caption p {
     color: #fff;
+}
+
+::ng-deep .owl-carousel .owl-wrapper-outer {
+    overflow: initial;
 }
 
 @media only screen and (max-width: 767px) {
