--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -40,7 +40,7 @@ li {
 
 header.header {
     position: fixed;
-    width: calc(100vw - 15px);
+    /* width: calc(100vw - 15px); */
     top: 0;
     left: 0;
     right: 0;
@@ -49,7 +49,16 @@ header.header {
     box-shadow: 0 0px 8px 1px #333;
 }
 
+.humberger__menu__nav ul li a {
+    position: relative;
+    display: inline-block;
+    padding-bottom: 5px;
+    border-bottom: 3px solid transparent;
+}
 
+.humberger__menu__nav ul li.active a {
+    border-bottom: 3px solid #7dac39;
+}
 
 @media only screen and (max-width: 767px) {
     .humberger__open {
