--- a/src/app/liked-shopped/liked-shopped.component.css
+++ b/src/app/liked-shopped/liked-shopped.component.css
@@ -7,8 +7,10 @@
     margin: 20px auto;
     padding-top: 0px;
     overflow-x: auto;
-    height: calc(100vh - 240px);
+    height: calc(100vh - 240px);    
+}
 
+.prod_container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -75,9 +77,7 @@
 .no_data {
     padding: 20px 10px;
     font-size: 22px;
-    border-left: 1px solid #333;
-    border-right: 1px solid #333;
-    border-bottom: 1px solid #333;
+    border: 1px solid #333;
 }
 
 .order_btn {
@@ -174,6 +174,10 @@
 
 .shop_box .box_content button:hover:before {
     transform: scaleX(1);
+}
+
+.shop_box .box_content > div > span {
+    font-size: 12px;
 }
 
 @media (max-width: 767px) {
