--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -94,11 +94,13 @@
                         <!-- [style.backgroundImage]="'url(assets/'+ item.image_url +')'" -->
                         <div class="product__item__pic set-bg">
                             <img class="thumb_img" [src]="'assets/'+ item.image_url" />
-                            <div class="like_icon_wrapper" (click)="shoppedProduct(item.product_id)" [ngClass]="{'active': item.shopped === true}">
+                            <div class="like_icon_wrapper d-none" (click)="shoppedProduct(item.product_id)" [ngClass]="{'active': item.shopped === true}">
                                 <img *ngIf="item.shopped === false" class="like_icon" src="assets/img/icons/light-grey-shopping-outline.svg" /> 
                                 <img *ngIf="item.shopped === true" class="like_icon" src="assets/img/icons/white-shopping-outline.svg" /> 
                             </div>
                             <!-- <img class="like_icon" src="assets/red-heart-outline.svg" /> -->
+                            <h6> {{item.product_name}} </h6>
+                            <h5> &euro; {{item.price}} </h5>
                             <ul class="product__item__pic__hover d-none">
                                 <li [ngClass]="{'green_bg': item.liked === true}" (click)="likeProduct(item.product_id)">
                                     
@@ -121,10 +123,23 @@
                                 </li>
                                 
                             </ul>
+                            <div class="shop_overlay">
+                                <button (click)="shoppedProduct(item.product_id)" [ngClass]="{'active': item.shopped === true}" class="shop_btn">
+                                    <span class="before"> 
+                                        <img *ngIf="item.shopped === false" class="like_icon" src="assets/img/icons/white-shopping-outline.svg" /> 
+                                        <img *ngIf="item.shopped === true" class="like_icon" src="assets/img/icons/white-shopping-cart.svg" />
+                                    </span>
+                                    
+                                    <span class="after"> 
+                                        <img *ngIf="item.shopped === false" class="like_icon" src="assets/img/icons/white-shopping-outline.svg" /> 
+                                        <img *ngIf="item.shopped === true" class="like_icon" src="assets/img/icons/white-shopping-cart.svg" />
+                                    </span>
+                                </button>
+                            </div>
                         </div>
                         <div class="product__item__text">
-                            <h6><a href="#"> {{item.product_name}} </a></h6>
-                            <h5> &euro; {{item.price}} </h5>
+                            
+                            
                         </div>
                     </div>
                 </div>
