made changes on home and nav

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -158,6 +158,7 @@
 .portfolio .items .box .inner {
     width: 70%;
     margin: 0 auto;
+    cursor: pointer;
 }
 
 .portfolio .items .box .inner img{
