--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -74,9 +74,9 @@
                              </ul>
                          </li> -->
                          <!-- <li><a href="./blog.html">Blog</a></li> -->
-                         <li routerLinkActive="active">
+                         <!-- <li routerLinkActive="active">
                              <a [routerLink]="['/contact']">Contact</a>
-                         </li>
+                         </li> -->
                          <!-- (click)="goToShopList('liked')" -->
                          <!-- <li class="position-relative">
                                 
