--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,48 +1,45 @@
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="assets/img/slide1.jpg" alt="Chania">
-      <div class="carousel-caption">
-        <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3>
-        <!-- <p>LA is always so much fun!</p> -->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="assets/img/slide1.jpg" alt="First slide">
+        <div class="carousel-caption">
+            <!-- <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3> -->
+            <!-- <p>LA is always so much fun!</p> -->
+            <h3> Le Marché De Garlande </h3>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/img/slide2.jpg" alt="Second slide">
+        <div class="carousel-caption">
+            <!-- <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3> -->
+            <!-- <p>LA is always so much fun!</p> -->
+            <h3> Le Marché De Garlande </h3>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/img/slide3.jpg" alt="Third slide">
+        <div class="carousel-caption">
+            <!-- <h3>Votre source de motivation est l’ingrédient qui peut faire toute la différence</h3> -->
+            <!-- <p>LA is always so much fun!</p> -->
+            <h3> Le Marché De Garlande </h3>
+          </div>
       </div>
     </div>
-
-    <div class="item">
-      <img src="assets/img/slide3.jpg" alt="Chicago">
-      <div class="carousel-caption">
-        <h3>Vous n’êtes pas encore arrivés mais vous êtes plus proche qu’hier</h3>
-        <!-- <p>Thank you, Chicago!</p> -->
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="assets/img/slide2.jpg" alt="New York">
-      <div class="carousel-caption">
-        <h3>C’est toujours le bon moment</h3>
-        <!-- <p>We love the Big Apple!</p> -->
-      </div>
-    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+  
 
 <div class='container-fluid custom-owl-carousel'>
   <owl-carousel [options]="SlideOptions" [items]="Images" [carouselClasses]="['owl-theme', 'sliding']" >
